# NimbusCTL

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
src/: main.rs
src/app/: config.rs  events.rs  mod.rs  settings.rs  startup.rs  state.rs
src/aws/: client.rs  credentials.rs  mod.rs  profiles.rs  regions.rs  tagging.rs  types.rs
src/aws/services/: ec2.rs  eks.rs  iam.rs  mod.rs  rds.rs  s3.rs  secrets.rs
src/command/: commands.rs  context.rs  mod.rs  palette.rs  registry.rs  tests.rs
src/command/registry/: ec2.rs  eks.rs  general.rs  iam.rs  mod.rs  navigation.rs  profile.rs  rds.rs  region.rs  s3.rs  secrets.rs
src/config/: defaults.rs  mod.rs  user_config.rs
src/dashboard/: favorites.rs  mod.rs  recent.rs  widgets.rs
src/ui/: layout.rs  mod.rs  styles.rs  ui.rs
src/ui/components/: command_palette.rs  header.rs  help_panel.rs  mod.rs  notification.rs  profile_selector.rs  quick_actions.rs  quick_nav.rs  region_selector.rs  resource_card.rs  status_bar.rs
src/ui/pages/: dashboard.rs  mod.rs  resource_detail.rs  resource_list.rs  settings.rs
src/ui/pages/dashboard/: favorites.rs  mod.rs
src/utils/: error.rs  helpers.rs
