[package]
name = "nimbus-ctl"
version = "0.1.0"
edition = "2021"

[dependencies]
# TUI Framework
ratatui = "0.29"
crossterm = "0.28"

# AWS SDK - temporarily disabled for Phase 1
# aws-config = "0.56"
# aws-credential-types = "0.56"
# aws-sdk-ec2 = "0.36"
# aws-sdk-s3 = "0.36"
# aws-sdk-iam = "0.36"
# aws-sdk-secretsmanager = "0.36"
# aws-sdk-rds = "0.36"
# aws-sdk-eks = "0.36"
# aws-sdk-sts = "0.36"

# Async Runtime
tokio = { version = "1.0", features = ["full"] }

# Error Handling
anyhow = "1.0"
thiserror = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# File System
dirs = "5.0"
configparser = "3.0"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# UI Utilities
unicode-width = "0.1"